--- a/index.html
+++ b/index.html
@@ -31,9 +31,31 @@
       }
     </script>
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+<script type="importmap">
+{
+  "imports": {
+    "react": "https://aistudiocdn.com/react@^19.2.0",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "vite": "https://aistudiocdn.com/vite@^7.2.4",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
+  }
+}
+</script>
 </head>
 <body class="bg-secondary antialiased">
 <div id="root"></div>
 <script type="module" src="/index.tsx"></script>
+<!-- FORCE UNREGISTER ALL SERVICE WORKERS TO FIX CACHING ISSUES -->
+<script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.getRegistrations().then(function(registrations) {
+      for(let registration of registrations) {
+        console.log('Force unregistering SW:', registration);
+        registration.unregister();
+      }
+    });
+  }
+</script>
 </body>
 </html>
