--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" href="https://via.placeholder.com/32.png?text=A" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#f59e0b" />
     <title>Asset Declaration System</title>
@@ -13,15 +13,15 @@
         theme: {
           extend: {
             colors: {
-              'primary': '#f59e0b', // Muted Gold (Amber 500)
-              'primary-dark': '#d97706', // Darker Gold (Amber 600)
-              'primary-darker': '#b45309', // Darkest Gold (Amber 700)
-              'secondary': '#ffffff', // Crisp White
-              'accent': '#f59e0b', // Muted Gold (Amber 500)
+              'primary': '#f59e0b',
+              'primary-dark': '#d97706',
+              'primary-darker': '#b45309',
+              'secondary': '#ffffff',
+              'accent': '#f59e0b',
               'success': '#16a34a',
               'warning': '#f97316',
-              'text-main': '#1f2937', // Dark Charcoal (Gray 800)
-              'text-secondary': '#4b5563', // Lighter Charcoal (Gray 600)
+              'text-main': '#1f2937',
+              'text-secondary': '#4b5563',
             },
             fontFamily: {
               sans: ['Inter', 'sans-serif'],
@@ -31,31 +31,9 @@
       }
     </script>
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
-<script type="importmap">
-{
-  "imports": {
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "vite": "https://aistudiocdn.com/vite@^7.2.4",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
-  }
-}
-</script>
 </head>
 <body class="bg-secondary antialiased">
 <div id="root"></div>
 <script type="module" src="/index.tsx"></script>
-<!-- FORCE UNREGISTER ALL SERVICE WORKERS TO FIX CACHING ISSUES -->
-<script>
-  if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.getRegistrations().then(function(registrations) {
-      for(let registration of registrations) {
-        console.log('Force unregistering SW:', registration);
-        registration.unregister();
-      }
-    });
-  }
-</script>
 </body>
 </html>
